# Small-Language-Model

./: .gitignore  Dataset.ipynb  Input-Output Blocks.ipynb  LICENSE  Loss Function.ipynb  Pre-training.ipynb  README.md  SLM Model Architecture.ipynb  SLM Training Configuration.ipynb  Small Language Model.ipynb  Tokenizer.ipynb  data_pipeline.py  evaluate.py  pyproject.toml  requirements.txt  train.py
notebooks/: NanoLLM_Model_Architecture.ipynb  dataset.ipynb  tokenizer.ipynb
src/: __init__.py  model.py  tokenizer.py
